--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h2>Kono somossa e somossa na jodi tumi bose na thako</h2>
+    <img width="200px" src="images/v.jpg">
+    <img width="200px" src="images/jk.jpg">
 </body>
 </html>
